fix(web): new avatar z-index;

--- a/apps/actor-web/app/styles/app.scss
+++ b/apps/actor-web/app/styles/app.scss
@@ -144,7 +144,7 @@ md-list-item {
     position: absolute;
     left: 0;
     top: 0;
-    z-index: 10;
+    z-index: 1;
     width: 48px;
     height: 48px;
   }
@@ -158,7 +158,7 @@ md-list-item {
     display: block;
     font-size: 18px;
     font-weight: 700;
-    z-index: 8;
+    z-index: 0;
     text-transform: uppercase;
     text-shadow: 0 -1px 5px rgba(0,0,0,.07);
     color: rgb(255,255,255);
